<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="28dp">

        <TextView
            style="@style/Header"
            android:id="@+id/header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/new_deck" />

        <EditText
            android:hint="@string/name"
            android:id="@+id/nameInput"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_width="match_parent" />

        <EditText
            android:hint="@string/subject"
            android:id="@+id/subjectInput"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent" />

        <include
            android:id="@+id/difficultyInput"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            layout="@layout/item_spinner" />

        <include
            android:id="@+id/visibilityInput"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            layout="@layout/item_spinner" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/BottomButton"
        android:background="@drawable/button_background"
        android:id="@+id/saveButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>