<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commentDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/dialog_shape">

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="10dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:text="@string/comment" />

        <TextView
            android:id="@+id/description"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:text="@string/comment_description" />

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:maxLength="180"
            android:maxLines="5"
            android:inputType="textFilter|textMultiLine"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialogButton"
            style="@style/BaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>